crates/rumps-query/snapshots/scripts__507_lazy_no_display_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; `Lazy[T]` does not satisfy `Display`.\n\nfun main() {\n  let x: Lazy[Int] = Lazy.Lazy(1)\n  write :display(x)\n}\n"
---
ERROR: type `Lazy[Int]` does not satisfy `Display` class
