crates/rumps-query/snapshots/scripts__50_destructure_obj_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Object missing field\nLET { name, missing } = { name: \"Alice\" }\n"
---
ERROR: field `missing` not found on type `{ name: String }`
