crates/rumps-query/snapshots/scripts__511_lazy_direct_force.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Direct `Lazy.Lazy(expr)` construction and forcing.\n\nfun main() {\n  let x = 10\n  match Lazy.Lazy(x + 1) {\n    Lazy.Lazy(f) => { write f() }\n  }\n}\n"
---
11
